--- a/faq.html
+++ b/faq.html
@@ -70,7 +70,7 @@
 	</details>
 	<br>
 	<details>
-	    <summary><font color="white" size="6">Is there any refund policy</font></summary>
+	    <summary><font color="white" size="6">Is there any refund policy?</font></summary>
 	    <p><mark>Refund for poor quality offered is 85% and for cancellation within the stipulated time is 100%.</mark></p>
 	</details>
 	<br>
