--- a/contact us.html
+++ b/contact us.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut icon" type="x-image/icon" href="favicon.ico">
+    <link rel="icon" type="x-image/icon" href="favicon.ico">
 </head>
 <script type="text/javascript">
 	function validate()
@@ -57,7 +59,17 @@
 </script>
 <style>
 	body{
+		background-color: rgba(242,33,33,0.2);
+
+		padding: 0;
+		margin: 0;
+	}
+	.main{
+		background-size: cover;
+		position: relative;
 		background-color: #f22121;
+		border-radius: 0 0 50% 50%/0 0 15% 15%;
+	    height: 70vh; 
 	}
 	h1{
 		color: #ffffff;
@@ -70,7 +82,7 @@
 		
 	}
 	p{
-		color: #fff;
+		color: #f22121;
 		font-size: 16px;
 	}
 	button{
@@ -102,29 +114,62 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
+	margin-bottom: 10%;
 	border-spacing: 10px;
     }
     .container .signup{
+    	padding: 10px;
+    	box-sizing: border-box;
+    	border-radius: 10px;
+    	border-width: 2px;
+    	background-color: rgba(255,255,255,0.9);
        position: relative;
+       box-shadow: 2px;
 	width: 100%;
 	height: 100%;
-	color: #fff;
+	color: #f22121;
+	border-style: solid;
+	border-left: #f22121;
+	border-right: #f22121;
+	justify-content: space-between;
 	margin-bottom: 10%;
     }
     .container .login{
+    	padding: 10px;
        position: relative;
 	width: 100%;
 	height: 100%;
+	color: #f22121;
+	border-style: solid;
+	border-left: #f22121;
+	border-right: #f22121;
+	box-sizing: border-box;
+	border-radius: 10px;
+	background-color: rgba(255,255,255,0.9);
+	border-width: 2px;
+	justify-content: space-between;
+	margin-bottom: 10%;
     }
     .container .support{
+    	justify-content: space-between;
+    	padding: 10px;
       position: relative;
+      border-style: solid;
+	border-left: #f22121;
+	border-right: #f22121;
 	width: 100%;
 	height: 100%;
+	color: #f22121;
+	box-sizing: border-box;
+	border-radius: 10px;
+	background-color: rgba(255,255,255,0.9);
+	border-width: 2px;
     }
 </style>
 <body>
+	<div class="main">
 	<button type="post"><a href="index.html"><font color="darkred">Home Page</font></a></button>
-	<p><a href="index.html">Home</a> > Contact Us</p>
+	<p style="color: white;"><a href="index.html">Home</a> > Contact Us</p>
 <h1><b>Login or Sign Up to get in contact<b></h1>
 <br>
 <br>
@@ -132,13 +177,13 @@
 <div class="container">
     <div class="col-lg-4 col-md-12 col-sm-12">   
         <div class="signup">
-	        <h2 align="center"><u>New to us! Sign up</u></h2>
+	        <h2 align="center"><u><font color="#f22121">New to us! Sign up</font></u></h2>
 	        <form onsubmit="return check()" action="main.html">
-		        <label><font color="white">First Name:  </font></label>
+		        <label>First Name:  </font></label>
 		        <input id="first" type="text" name="first name" placeholder="First name" required>
 		        <p>(Your first name will be the User Name for login)</p>
 		        
-		        <label><font color="white">Last Name:  </label>
+		        <label>Last Name:  </label>
 		        <input id="last" type="text" name="last name" placeholder="Last name" required>
 		        
 		        <p>Your gender:  </p>
@@ -150,24 +195,25 @@
                 <!--<label for="gender3">Prefer not to say<label>--><br><br>
                 <label>Phone Number: </label>
                 <input id="num" type="number" name="phone" placeholder="10 digit number" required="number" min="7000000000" max="9999999999"><br><br>
-		        <label><font color="white">Password:  </font></label>
+		        <label>Password:  </font></label>
 		        <input id="passw" type="password" name="Password" placeholder="Enter new password" minlength="8" required><br><br>
-		        <label><font color="white">Re-enter Password:  </font></label>
+		        <label>Re-enter Password:  </font></label>
 		        <input id="passwr" type="password" name="Password" placeholder="Re-enter your password" required><br><br>
 		        <input type="checkbox" name="choice">Send me notifications about ongoing offers<br><br>
 	        </form>
 	        <button type="post" id="signup"><a href="main.html"><font color="green">Sign Up</font></a></button>
         </div>
     </div>
+
     <div class="col-lg-4 col-md-12 col-sm-12">   
         <div class="login">
-	        <h2 align="center"><u>Already have account! Login</u></h2>
+	        <h2 align="center"><u><font color="#f22121">Already have account! Login</font></u></h2>
 	        <form onsubmit="return validate()" action="main.html">
 		        <label>User Name:</label>
 		        <input id="user" type="text" placeholder="Enter User name" required><br><br>
 				<label>Your Password:</label>
 				<input id="pass" type="password" placeholder="Enter your Password" required><br>
-				<a href="" id="forgot" onclick="send()">Forgot password? Generate OTP instead.</a>
+				<a href="" id="forgot" onclick="send()" style="color: #f22121">Forgot password? Generate OTP instead.</a>
 				<br><br>
                 <button type="post" id="login"><a href="main.html"><font color="green">Login</font></a></button>
 	        </form>
@@ -184,5 +230,6 @@
     </div>
 </div>
 </section>
+</div>
 </body>
 </html>
