--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	 <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="shortcut-icon" type="x-image/icon" href="favicon.ico">
+    <link rel="icon" type="x-image/icon" href="favicon.ico">
 </head>
 <style>
 	body{
@@ -138,6 +140,26 @@
         align-items: center;
         justify-content: center;
 	 }
+	 .float{
+	position:fixed;
+	width:80px;
+	height:80px;
+	bottom:40px;
+	right:40px;
+	background-color:#f22121;
+	color:#fff;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+	z-index: 1000;
+	border-width: 3px;
+	border-style: solid;
+	border-color: #fff;
+}
+
+.my-float{
+	margin-top:22px;
+}
 	</style>
 <body>
 <button type="post"><a href="index.html"><font color="darkred">Home Page</font></a></button>
@@ -154,6 +176,12 @@
     </div>
 	<p><a href="index.html">Home</a> > Dishes</p>
 	<br>
+	<div class="float">
+	<a href="cart.html">
+<i class="fa fa-shopping-cart fa-2x my-float"></i>
+<p id="count" style="">0</p>
+</a>
+</div>
 	<h1><b>Have a look at what we have for you!</b>😋</h1>
 	<br>
 	<br>
@@ -170,7 +198,7 @@
 		            <strike>@RS.160(8pcs)</strike>||<i>Save: RS.20</i></font>
 		            <br>
 		            <font color="#f22121" size="4px"><strong>@RS.140(8pcs)</strong></font>
-		            <button id="add" type="post" onclick="redirect()"><a href="cart.html">ADD</a></button>
+		            <button id="add"><a onclick="display()">ADD</a></button>
 		            </div>
 	            </div>
 	        </div>
@@ -185,7 +213,7 @@
             			<strike>@RS.160(1 plt)</strike>||<i>SAVE: RS.30</i></font>
             			<br>
 	                <font color="#f22121" size="4px"><strong>@RS.130(1 plt)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	                </div>
                 </div>
             </div>
@@ -200,7 +228,7 @@
                     <strike>@RS.125(9pcs)</strike>||<i>SAVE RS.25</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px" onclick="like()"><strong>@RS.100(9Pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	                </div>
                 </div>
             </div>
@@ -215,7 +243,7 @@
 	                	<strike>@RS. 100(4pcs)</strike>||<i>SAVE RS.20</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.80(4pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -230,7 +258,7 @@
 					<strike>@RS 160(1 plt)</strike>||<i>SAVE RS.30</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.130(1 plt)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -245,7 +273,7 @@
 	                	<strike>@RS.110(9pcs)</strike>||<i>SAVE RS.20</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.90(9pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -260,7 +288,7 @@
 	                	<strike>@RS.140(1 plt)</strike>||<i>SAVE RS.30</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.110(1 plt)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -275,7 +303,7 @@
 	                	<strike>@RS.75</strike>||<i>SAVE RS.25</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.50</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -290,7 +318,7 @@
 	                	<strike>@RS.90</strike>||<i>SAVE RS.25</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.65</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -305,7 +333,7 @@
 	                	<strike>@RS.90(2 pcs)</strike>||<i>SAVE RS.30</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.60(2 pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -320,7 +348,7 @@
 	                	<strike>@RS.85(6 pcs)</strike>||<i>SAVE RS.10</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.75(6 pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -335,7 +363,7 @@
 	                	<strike>@RS.120(10pcs)</strike>||<i>SAVE RS.40</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.80(10pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -350,7 +378,7 @@
 	                	<strike>@RS.120(9pcs)</strike>||<i>SAVE RS.30</i></font>
 	                	<br>
 	                <font size="4px" color="#f22121"><strong>@RS.90(9pcs)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
@@ -365,7 +393,7 @@
 	                	<strike>@RS.110(onw)</strike>||<i>SAVE RS.20</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS.90(onw)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="customize1.html">CUSTOMIZE</a></button>
+	                <button id="add"><a href="customize1.html">CUSTOMIZE</a></button>
 	            </div>
                 </div>
             </div>
@@ -380,7 +408,7 @@
 	                	<strike>@RS.120(onw)</strike>||<i>SAVE RS.20</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@RS100(onw)</strong></font>
-	                <button id="add" onclick="redirect()"><a href="customize2.html">CUSTOMIZE</a></button>
+	                <button id="add"><a href="customize2.html">CUSTOMIZE</a></button>
 	            </div>
                 </div>
             </div>
@@ -395,12 +423,13 @@
 	                	<strike>@RS.50(5 pcs)</strike>||<i>SAVE RS.10</i></font>
 	                	<br>
 	                <font color="#f22121" size="4px"><strong>@40(5 pcs)</strong></font>
-	                <button id="add"><a onclick="redirect()" href="cart.html">ADD</a></button>
+	                <button id="add"><a onclick="display()">ADD</a></button>
 	            </div>
                 </div>
             </div>
         </div>
 	</section>
+	<script type="text/javascript" src="counter.js"></script>
 	<script type="text/javascript">
 	function fn(){
 	var div = document.getElementById("menu");
