--- a/fav.html
+++ b/fav.html
@@ -6,9 +6,14 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+	<link rel="shortcut-icon" type="x-image/icon" href="favicon.ico">
+    <link rel="icon" type="x-image/icon" href="favicon.ico">
 </head>
 <style type="text/css">
 	body{
+		background-color: #fff;
+	}
+	.main{
 		background-color: #f22121;
 	}
 	button{
@@ -52,6 +57,7 @@
 	}
 </style>
 <body>
+	<div class="main">
 <button type="post"><a href="index.html"><font color="darkred">Home Page</font></a>
 </button>
 <p><a href="index.html">Home</a> > <a href="main.html">Dishes</a> > Favourites</p>
@@ -65,5 +71,7 @@
 		</div>
 	</div>
 </div>
+</div>
+<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#f22121" fill-opacity="1" d="M0,128L13.3,122.7C26.7,117,53,107,80,122.7C106.7,139,133,181,160,186.7C186.7,192,213,160,240,144C266.7,128,293,128,320,154.7C346.7,181,373,235,400,213.3C426.7,192,453,96,480,96C506.7,96,533,192,560,197.3C586.7,203,613,117,640,122.7C666.7,128,693,224,720,245.3C746.7,267,773,213,800,186.7C826.7,160,853,160,880,170.7C906.7,181,933,203,960,213.3C986.7,224,1013,224,1040,213.3C1066.7,203,1093,181,1120,154.7C1146.7,128,1173,96,1200,90.7C1226.7,85,1253,107,1280,149.3C1306.7,192,1333,256,1360,282.7C1386.7,309,1413,299,1427,293.3L1440,288L1440,0L1426.7,0C1413.3,0,1387,0,1360,0C1333.3,0,1307,0,1280,0C1253.3,0,1227,0,1200,0C1173.3,0,1147,0,1120,0C1093.3,0,1067,0,1040,0C1013.3,0,987,0,960,0C933.3,0,907,0,880,0C853.3,0,827,0,800,0C773.3,0,747,0,720,0C693.3,0,667,0,640,0C613.3,0,587,0,560,0C533.3,0,507,0,480,0C453.3,0,427,0,400,0C373.3,0,347,0,320,0C293.3,0,267,0,240,0C213.3,0,187,0,160,0C133.3,0,107,0,80,0C53.3,0,27,0,13,0L0,0Z"></path></svg>
 </body>
 </html>
