--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,8 @@
 	<title>Your Cart</title>
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
       <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
+	<link rel="shortcut-icon" type="x-image/icon" href="favicon.ico">
+    <link rel="icon" type="x-image/icon" href="favicon.ico">
 </head>
 <style>
 	body{
