--- a/contact us.html
+++ b/contact us.html
@@ -90,7 +90,7 @@ body{
   display: none;
 }*/
 #signup:checked ~ .slider-tab{
-  left: 60%;
+  left: 50%;
 }
 #signup:checked ~ label.signup{
   color: #fff;
@@ -240,12 +240,13 @@ form .btn input[type="submit"]{
 <br>
       <div class="wrapper">
          <div class="title-text">
-            <div class="title login">
+            <!--<div class="title login">
                Login Form
             </div>
             <div class="title signup">
                Signup Form
-            </div>
+            </div>-->
+            <div class="title">Login or Signup to become a Taste-Buddy.</div>
          </div>
          <div class="form-container">
             <div class="slide-controls">
