--- a/contact us.html
+++ b/contact us.html
@@ -259,7 +259,7 @@ form .btn input[type="submit"]{
             <div class="form-inner">
                <form action="main.html" onsubmit="return validate()" class="login">
                   <div class="field">
-                     <input type="email" placeholder="Email Address" required>
+                     <input type="email" placeholder="Email Address" required="@">
                   </div>
                   <div class="field">
                      <input type="password" placeholder="Password" required>
@@ -298,6 +298,9 @@ form .btn input[type="submit"]{
                 <br>
                                     <div class="field">
                      <input id="num" type="number" name="phone" placeholder="10 digit number" required="number" min="7000000000" max="9999999999">
+                  </div>
+                  <div class="field">
+                     <input type="email" placeholder="Email Address" required="@">
                   </div>
                   <div class="field">
                      <input id="passw" type="password" name="Password" placeholder="Enter new password" minlength="6" required>
